<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/homeCoursesFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/bottom_menu_title_home" />
    <item
        android:id="@+id/coursesStaggedFragment"
        android:icon="@drawable/ic_effort"
        android:title="@string/bottom_menu_title_courses" />
    <item
        android:id="@+id/searchMatchesCoursesFragment"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/bottom_menu_title_search" />
    <item
        android:id="@+id/joinVideoCallFragment"
        android:icon="@android:drawable/stat_sys_headset"
        android:title="@string/bottom_menu_title_conference" />
    <item
        android:id="@+id/userProfileFragment"
        android:icon="@drawable/ic_menu_profile"
        android:title="@string/title_profile_tag" />
    <!-- <item
         android:id="@+id/userProfileFragment"
         android:icon="@drawable/ic_user_icon"
         android:title="@string/bottom_menu_title_profile" />-->

</menu>
