<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bariol_bold"
            android:gravity="center_horizontal"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_sign_profile_user_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:scaleType="centerCrop"
            android:background="@drawable/image_circle"
            android:src="@drawable/ic_user" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_header"
        android:orientation="vertical"
        android:padding="10dp">


        <!-- User name -->
        <EditText
            android:id="@+id/et_sign_profile_user_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_roung_edittext"
            android:drawableStart="@drawable/image_circle"
            android:fontFamily="@font/bariol_bold"
            android:hint="@string/title_user"
            android:paddingStart="10dp"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <!-- Gender -->
        <LinearLayout
            android:layout_height="40dp"
            android:layout_width="match_parent"
            android:background="@drawable/bg_roung_edittext"
            android:paddingStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/bariol_bold"
                android:gravity="center_vertical"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sign_spinner_gender"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/bariol_regular"
                android:gravity="end"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_sign_profile_user_age"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_roung_edittext"
            android:fontFamily="@font/bariol_bold"
            android:gravity="center_vertical"
            android:hint="@string/user_age"
            android:paddingStart="10dp"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_sign_profile_user_dob"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_roung_edittext"
            android:fontFamily="@font/bariol_bold"
            android:gravity="center_vertical"
            android:hint="@string/date_of_birth"
            android:paddingStart="10dp"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- Mobile Number -->
        <EditText
            android:id="@+id/et_sign_profile_user_mobile"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_roung_edittext"
            android:drawableStart="@drawable/image_circle"
            android:fontFamily="@font/bariol_bold"
            android:hint="@string/mobile"
            android:paddingStart="10dp"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- Email -->
        <EditText
            android:id="@+id/et_sign_profile_user_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_roung_edittext"
            android:drawableStart="@drawable/image_circle"
            android:fontFamily="@font/bariol_bold"
            android:hint="@string/email"
            android:paddingStart="10dp"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_switch_to_sign_in"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@+id/btn_sign_up"
        android:fontFamily="@font/bariol_bold"
        android:gravity="center_horizontal"
        android:hint="@string/sign_in"
        android:textColorHint="@color/black_transparent"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/bariol_bold"
        android:padding="12dp"
        android:text="@string/btn_sign_up"
        android:textColor="@color/white" />
</RelativeLayout>

