<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/horizontal_dashboard"
        android:paddingTop="@dimen/fab_margin"
        android:paddingRight="@dimen/horizontal_dashboard"
        android:weightSum="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/bariol_bold"
            android:text="@string/title_profile"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_video_call" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_video_meeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_create_join_meeting"
        android:layout_below="@+id/ll_header"
        android:layout_marginTop="20dp"
        tools:listitem="@layout/item_meeting_details" />

    <Button
        android:id="@+id/btn_create_join_meeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/share"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/bariol_bold"
        android:padding="12dp"
        android:text="@string/create_join"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/bariol_bold"
        android:padding="12dp"
        android:text="@string/share_code"
        android:textColor="@color/white" />


</RelativeLayout>
