<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="5dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/top_text_subtitle_card"
        android:background="@drawable/result_card"
        android:contentDescription="@string/imageAccess"
        android:padding="@dimen/activity_vertical_margin"
        android:src="@drawable/ic_play" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/nav_header_vertical_spacing"


        android:orientation="vertical">

        <TextView
            style="@style/viewParent.headerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bariol_regular"
            android:text="@string/title_course"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bariol_regular"
            android:text="@string/course_details"
            android:textColor="@color/bottomNavigationTextColor" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@color/nav_bar_color" />
    </LinearLayout>
</LinearLayout>