<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/header_icon"
        android:layout_width="@dimen/image_header_dimen"
        android:layout_height="@dimen/image_header_dimen"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/image_header_top_margin"
        android:src="@drawable/ic_icon_layer"
        android:contentDescription="@string/image" />

    <RelativeLayout
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_icon"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/login_layout_padding"
            android:paddingTop="@dimen/login_layout_padding_top"
            android:paddingRight="@dimen/login_layout_padding"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/horizontal_dashboard"
                android:paddingTop="@dimen/fab_margin"
                android:paddingRight="@dimen/horizontal_dashboard"
                android:weightSum="100">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="40"
                    android:fontFamily="@font/bariol_bold"
                    android:text="@string/title_login"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="60"
                    android:src="@drawable/ic_video_call" />

            </LinearLayout>

            <EditText
                android:id="@+id/et_user_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_roung_edittext"
                android:fontFamily="@font/bariol_bold"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLength="10"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black_transparent" />

            <EditText
                android:id="@+id/codeBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_roung_edittext"
                android:fontFamily="@font/bariol_bold"
                android:hint="@string/enter_otp"
                android:inputType="phone"
                android:padding="12dp"
                android:maxLength="4"
                android:textColor="@color/black"
                android:textColorHint="@color/black_transparent" />

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/bariol_bold"
                android:padding="12dp"
                android:background="@drawable/round_button"
                android:text="@string/log_in"
                android:textColor="@color/white" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>